feat: added update account endpoint